--- a/window_settings.json
+++ b/window_settings.json
@@ -1,5 +1,5 @@
 {
-    "x": 2109,
+    "x": 2105,
     "y": 1,
     "width": 413,
     "height": 1352,
@@ -10,7 +10,7 @@
     "csvFontSize": 14,
     "tooltipFontSize": 12,
     "visibility_index": 1,
-    "service_visibility": "Evenimente serviciu ascunse",
+    "service_visibility": "Evenimente serviciu vizibile",
     "use_work_schedule": true,
     "work_schedule": {
         "Luni": {
